--- a/index.html
+++ b/index.html
@@ -625,9 +625,9 @@
                     <span class="dot" aria-label="Go to slide 5" role="button"></span>
                 </div>
             </div>
-            <div class="text-center mt-6">
+<!--             <div class="text-center mt-6">
                 <a href="/BagChk2.0/booking.html" class="btn-primary px-4 py-2 rounded-md">Book Storage for Your Event</a>
-            </div>
+            </div> -->
         </div>
     </section>
 
@@ -654,6 +654,9 @@
                 </div>
             </div>
         </div>
+             <div class="text-center mt-6">
+                <a href="/BagChk2.0/booking.html" class="btn-primary px-4 py-2 rounded-md">Book Storage for Your Event</a>
+            </div>
     </section>
 
     <!-- Why Choose BagChk2.0 -->
