--- a/index.html
+++ b/index.html
@@ -635,21 +635,47 @@
     <section id="services" class="py-12 sm:py-16 lg:py-20 bg-[var(--background)]">
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
             <h2 class="text-2xl sm:text-3xl lg:text-4xl font-bold text-center mb-8 sm:mb-12">Our Services</h2>
+            <section id="slideshow" class="py-12 sm:py-16 lg:py-20 bg-[var(--background)]">
+        <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
+            <h2 class="text-2xl sm:text-3xl lg:text-4xl font-bold text-center mb-8 sm:mb-12">Explore Chicago Events</h2>
+            <div class="slideshow-container relative">
+                <!-- Slides -->
+                <div class="slide fade active" role="group" aria-label="Slide 1 of 5">
+                    <img src="/BagChk2.0/images/travel.jpg" alt="Chicago Bulls game at United Center" class="w-full h-48 sm:h-64 lg:h-96 object-cover rounded-lg mb-4">
+                    <div class="slide-caption bg-[var(--card-bg)] p-4 sm:p-6 rounded-lg">
+                        <h3 class="text-lg sm:text-xl font-semibold mb-2">Chicago Bulls Game at United Center</h3>
+                        <p class="text-[var(--text-light)]">Experience the electric atmosphere of a Chicago Bulls game at the iconic United Center. Drop your bags with BagChk and cheer without the hassle!</p>
+                    </div>
+                </div>
+                <div class="slide fade" role="group" aria-label="Slide 2 of 5">
+                    <img src="/BagChk2.0/images/business.jpg" alt="Chicago Botanic Garden" class="w-full h-48 sm:h-64 lg:h-96 object-cover rounded-lg mb-4">
+                    <div class="slide-caption bg-[var(--card-bg)] p-4 sm:p-6 rounded-lg">
+                        <h3 class="text-lg sm:text-xl font-semibold mb-2">Chicago Botanic Garden</h3>
+                        <p class="text-[var(--text-light)]">Stroll through the serene landscapes of the Chicago Botanic Garden. Store your luggage with BagChk to explore 385 acres of natural beauty hands-free.</p>
+                    </div>
+                </div>
+                <div class="slide fade" role="group" aria-label="Slide 3 of 5">
+                    <img src="/BagChk2.0/images/travel.jpg" alt="Tradeshow at McCormick Place" class="w-full h-48 sm:h-64 lg:h-96 object-cover rounded-lg mb-4">
+                    <div class="slide-caption bg-[var(--card-bg)] p-4 sm:p-6 rounded-lg">
+                        <h3 class="text-lg sm:text-xl font-semibold mb-2">Tradeshow at McCormick Place</h3>
+                        <p class="text-[var(--text-light)]">Attend a world-class tradeshow at McCormick Place without carrying your bags. BagChk offers secure storage nearby for a seamless experience.</p>
+                    </div>
+            
             <p class="text-center mb-6 sm:mb-8 max-w-3xl mx-auto text-[var(--text-light)]">BagChk is a cutting-edge app platform revolutionizing luggage storage in Chicago. We seamlessly connect travelers with vetted local businesses for convenient, safe, and affordable bag storage.</p>
             <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6 sm:gap-8">
                 <div class="bg-[var(--card-bg)] p-4 sm:p-6 rounded-lg animate-card">
-                    <img src="/BagChk2.0/images/sports.jpg" alt="Short-Term Storage" class="w-full h-40 sm:h-48 object-cover rounded-t-lg mb-4">
-                    <h3 class="text-lg sm:text-xl font-semibold mb-3">Short-Term Storage</h3>
+<!--                     <img src="/BagChk2.0/images/sports.jpg" alt="Short-Term Storage" class="w-full h-40 sm:h-48 object-cover rounded-t-lg mb-4">
+                    <h3 class="text-lg sm:text-xl font-semibold mb-3">Short-Term Storage</h3> -->
                     <p class="text-[var(--text-light)]">Perfect for a few hours of sightseeing. Drop off your bags at any of our downtown Chicago locations and enjoy the city hassle-free.</p>
                 </div>
                 <div class="bg-[var(--card-bg)] p-4 sm:p-6 rounded-lg animate-card">
-                    <img src="/BagChk2.0/images/travel.jpg" alt="Long-Term Storage" class="w-full h-40 sm:h-48 object-cover rounded-t-lg mb-4">
-                    <h3 class="text-lg sm:text-xl font-semibold mb-3">Long-Term Storage</h3>
+<!--                     <img src="/BagChk2.0/images/travel.jpg" alt="Long-Term Storage" class="w-full h-40 sm:h-48 object-cover rounded-t-lg mb-4">
+                    <h3 class="text-lg sm:text-xl font-semibold mb-3">Long-Term Storage</h3> -->
                     <p class="text-[var(--text-light)]">Ideal for travelers needing storage for days or weeks. Our secure facilities keep your luggage safe for as long as you need.</p>
                 </div>
                 <div class="bg-[var(--card-bg)] p-4 sm:p-6 rounded-lg animate-card">
-                    <img src="/BagChk2.0/images/business.jpg" alt="Business Solutions" class="w-full h-40 sm:h-48 object-cover rounded-t-lg mb-4">
-                    <h3 class="text-lg sm:text-xl font-semibold mb-3">Business Solutions</h3>
+<!--                     <img src="/BagChk2.0/images/business.jpg" alt="Business Solutions" class="w-full h-40 sm:h-48 object-cover rounded-t-lg mb-4">
+                    <h3 class="text-lg sm:text-xl font-semibold mb-3">Business Solutions</h3> -->
                     <p class="text-[var(--text-light)]">Tailored storage for business travelers. Store briefcases, equipment, or event materials with our flexible options.</p>
                 </div>
             </div>
