--- a/index.html
+++ b/index.html
@@ -579,14 +579,14 @@
             <div class="slideshow-container relative">
                 <!-- Slides -->
                 <div class="slide fade active" role="group" aria-label="Slide 1 of 5">
-                    <img src="/BagChk2.0/images/bull.jpg" alt="Chicago Bulls game at United Center" class="w-full h-48 sm:h-64 lg:h-96 object-cover rounded-lg mb-4">
+                    <img src="/BagChk2.0/images/bulls.jpg" alt="Chicago Bulls game at United Center" class="w-full h-48 sm:h-64 lg:h-96 object-cover rounded-lg mb-4">
                     <div class="slide-caption bg-[var(--card-bg)] p-4 sm:p-6 rounded-lg">
                         <h3 class="text-lg sm:text-xl font-semibold mb-2">Chicago Bulls Game at United Center</h3>
                         <p class="text-[var(--text-light)]">Experience the electric atmosphere of a Chicago Bulls game at the iconic United Center. Drop your bags with BagChk and cheer without the hassle!</p>
                     </div>
                 </div>
                 <div class="slide fade" role="group" aria-label="Slide 2 of 5">
-                    <img src="/BagChk2.0/images/botanic-garden.jpg" alt="Chicago Botanic Garden" class="w-full h-48 sm:h-64 lg:h-96 object-cover rounded-lg mb-4">
+                    <img src="/BagChk2.0/images/garden.jpg" alt="Chicago Botanic Garden" class="w-full h-48 sm:h-64 lg:h-96 object-cover rounded-lg mb-4">
                     <div class="slide-caption bg-[var(--card-bg)] p-4 sm:p-6 rounded-lg">
                         <h3 class="text-lg sm:text-xl font-semibold mb-2">Chicago Botanic Garden</h3>
                         <p class="text-[var(--text-light)]">Stroll through the serene landscapes of the Chicago Botanic Garden. Store your luggage with BagChk to explore 385 acres of natural beauty hands-free.</p>
