--- a/index.html
+++ b/index.html
@@ -607,7 +607,7 @@
                     </div>
                 </div>
                 <div class="slide fade" role="group" aria-label="Slide 5 of 5">
-                    <img src="/BagChk2.0/images/soldier.jpg" alt="Concert at Soldier Field" class="w-full h-48 sm:h-64 lg:h-96 object-cover rounded-lg mb-4">
+                    <img src="/BagChk2.0/images/solider.jpg" alt="Concert at Soldier Field" class="w-full h-48 sm:h-64 lg:h-96 object-cover rounded-lg mb-4">
                     <div class="slide-caption bg-[var(--card-bg)] p-4 sm:p-6 rounded-lg">
                         <h3 class="text-lg sm:text-xl font-semibold mb-2">Concerts at Soldier Field</h3>
                         <p class="text-[var(--text-light)]">Rock out at a concert at Soldier Field. With BagChk, store your bags securely nearby and dance the night away without worry.</p>
