--- a/index.html
+++ b/index.html
@@ -692,7 +692,7 @@
             <div class="grid grid-cols-1 lg:grid-cols-2 gap-6 sm:gap-8">
                 <div>
                     <h3 class="text-lg sm:text-xl font-semibold mb-4">Contact Information</h3>
-                    <p class="text-[var(--text-light)] mb-2">Email: support@BagChk2.0.com</p>
+                    <p class="text-[var(--text-light)] mb-2">Email: support@BagChk.com</p>
                     <p class="text-[var(--text-light)] mb-2">Phone: (312) 555-1234</p>
                     <p class="text-[var(--text-light)]">Address: 123 N Michigan Ave, Chicago, IL 60601</p>
                 </div>
