--- a/index.html
+++ b/index.html
@@ -689,8 +689,8 @@
     <section id="contact" class="py-12 sm:py-16 lg:py-20 bg-[var(--background)]">
         
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
-            <h2 class="text-2xl sm:text-3xl lg:text-4xl font-bold text-center mb-8 sm:mb-12">Get in Touch</h2>
-            <div class="grid grid-cols-1 lg:grid-cols-2 gap-6 sm:gap-8">
+<!--             <h2 class="text-2xl sm:text-3xl lg:text-4xl font-bold text-center mb-8 sm:mb-12">Get in Touch</h2>
+            <div class="grid grid-cols-1 lg:grid-cols-2 gap-6 sm:gap-8"> -->
                 <div>
                     <h3 class="text-lg sm:text-xl font-semibold mb-4">Contact Information</h3>
                     <p class="text-[var(--text-light)] mb-2">Email: support@BagChk.com</p>
