--- a/index.html
+++ b/index.html
@@ -620,8 +620,8 @@
                     </div>
                 </div>
                 <!-- Navigation Buttons -->
-<!--                 <button class="prev-btn absolute top-1/2 left-0 transform -translate-y-1/2 bg-[var(--primary)] text-white p-2 rounded-r-md hover:bg-[var(--primary-dark)] focus:outline-none focus:ring-2 focus:ring-[var(--primary)]" aria-label="Previous slide">❮</button>
-                <button class="next-btn absolute top-1/2 right-0 transform -translate-y-1/2 bg-[var(--primary)] text-white p-2 rounded-l-md hover:bg-[var(--primary-dark)] focus:outline-none focus:ring-2 focus:ring-[var(--primary)]" aria-label="Next slide">❯</button> -->
+                <button class="prev-btn absolute top-1/2 left-0 transform -translate-y-1/2 bg-[var(--primary)] text-white p-2 rounded-r-md hover:bg-[var(--primary-dark)] focus:outline-none focus:ring-2 focus:ring-[var(--primary)]" aria-label="Previous slide">❮</button>
+                <button class="next-btn absolute top-1/2 right-0 transform -translate-y-1/2 bg-[var(--primary)] text-white p-2 rounded-l-md hover:bg-[var(--primary-dark)] focus:outline-none focus:ring-2 focus:ring-[var(--primary)]" aria-label="Next slide">❯</button>
                 <!-- Navigation Dots -->
                 <div class="dots-container flex justify-center mt-4">
                     <span class="dot active" aria-label="Go to slide 1" role="button"></span>
