--- a/booking.html
+++ b/booking.html
@@ -428,20 +428,20 @@
     </div>
 </nav>
 
- <section id="book" class="booking-section">
-        <div class="booking-container">
-            
+<!--         <div class="booking-container">
+             <section id="book" class="booking-section">
+
             <div class="carousel-container" role="region" aria-label="Promotional images carousel">
                 <div class="carousel-item active" style=" Easter Egg! You're a curious one, aren't you? 🕵️‍♂️ Here's a fun fact: Chicago's nickname 'The Windy City' isn't just about the weather—it's also a nod to its long-winded politicians! Keep exploring, and maybe you'll find more hidden gems! 😎"></div>
                 <div class="carousel-item" style="background-image: url('/BagChk2.0/images/sports.jpg')"></div>
                 <div class="carousel-item" style="background-image: url('/BagChk2.0/images/mpark.jpg')"></div>
                 <div class="carousel-item" style="background-image: url('/BagChk2.0/images/npier.jpg')"></div>
-                <div class="carousel-item" style="background-image: url('/BagChk2.0/images/mpark.jpg')"></div>
-
-            </div>
-  <!-- Hero Section -->
+                <div class="carousel-item" style="background-image: url('/BagChk2.0/images/mpark.jpg')"></div> -->
+<!--     </section>
+ -->
+<!--             </div>
+  <!-- Hero Section --> -->
  
-    </section>
             <h1 class="text-center mb-4">Secure Your Storage in Just a Minute!</h1>
             <div id="distance-info" class="text-center text-[var(--text-light)] mb-6" aria-live="polite"></div>
             <div class="trust-section">
