--- a/booking.html
+++ b/booking.html
@@ -440,7 +440,7 @@
 <!--     </section>
  -->
 <!--             </div>
-  <!-- Hero Section --> -->
+  <!-- Hero Section --> 
  
             <h1 class="text-center mb-4">Secure Your Storage in Just a Minute!</h1>
             <div id="distance-info" class="text-center text-[var(--text-light)] mb-6" aria-live="polite"></div>
