--- a/booking.html
+++ b/booking.html
@@ -428,34 +428,11 @@
     </div>
 </nav>
 
-<!--         <div class="booking-container">
-             <section id="book" class="booking-section">
-
-            <div class="carousel-container" role="region" aria-label="Promotional images carousel">
-                <div class="carousel-item active" style=" Easter Egg! You're a curious one, aren't you? 🕵️‍♂️ Here's a fun fact: Chicago's nickname 'The Windy City' isn't just about the weather—it's also a nod to its long-winded politicians! Keep exploring, and maybe you'll find more hidden gems! 😎"></div>
-                <div class="carousel-item" style="background-image: url('/BagChk2.0/images/sports.jpg')"></div>
-                <div class="carousel-item" style="background-image: url('/BagChk2.0/images/mpark.jpg')"></div>
-                <div class="carousel-item" style="background-image: url('/BagChk2.0/images/npier.jpg')"></div>
-                <div class="carousel-item" style="background-image: url('/BagChk2.0/images/mpark.jpg')"></div> -->
-<!--     </section>
- -->
-<!--             </div>
-  <!-- Hero Section --> 
  
             <h1 class="text-center mb-4">Secure Your Storage in Just a Minute!</h1>
             <div id="distance-info" class="text-center text-[var(--text-light)] mb-6" aria-live="polite"></div>
-<!--             <div class="trust-section">
-                <svg class="w-6 h-6 text-[var(--primary)]" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7" />
-                </svg>
-<!--                 <p>Over 5,000 travelers trust Bagchk! “Super easy and secure!” – John D.</p>
-                <div class="flex gap-1 ml-2"> -->
-<!--                     <svg class="w-5 h-5 text-yellow-400" fill="currentColor" viewBox="0 0 24 24">
-                        <path d="M12 17.27L18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21z" />
-                    </svg>
-                    <span>4.8/5</span>
-                </div> -->
-            </div> -->
+
+            </div> 
             <div class="progress-bar" role="progressbar" aria-valuenow="1" aria-valuemin="1" aria-valuemax="3" aria-label="Booking progress">
                 <div class="progress-step active" data-step="personal"><span class="step-number">1</span> Personal Info<div class="tooltip">Enter your contact details</div></div>
                 <div class="progress-step" data-step="storage"><span class="step-number">2</span> Storage Details<div class="tooltip">Choose location and timing</div></div>
