--- a/booking.html
+++ b/booking.html
@@ -133,6 +133,12 @@
             padding: 1.5rem;
             max-height: 90vh;
             overflow-y: auto;
+            color: var(--text);
+        }
+
+        [data-theme="dark"] .modal-content {
+            background: #2d3748;
+            color: #e5e7eb;
         }
 
         .qr-container {
@@ -145,6 +151,13 @@
         #qrcode {
             max-width: 100%;
             aspect-ratio: 1/1;
+            background: #fff;
+            padding: 0.5rem;
+            border-radius: 8px;
+        }
+
+        [data-theme="dark"] #qrcode {
+            background: #fff;
         }
 
         /* Modal details specific styles */
@@ -155,6 +168,7 @@
             margin-bottom: 1.5rem;
             padding: 1rem;
             word-break: break-word;
+            font-family: system-ui, -apple-system, sans-serif;
         }
 
         #modal-details p {
@@ -165,9 +179,12 @@
             font-weight: 600;
         }
 
-        /* Dark theme adjustments */
         [data-theme="dark"] #modal-details {
-            color: var(--text);
+            color: #e5e7eb;
+        }
+
+        [data-theme="dark"] #modal-details strong {
+            color: #f3f4f6;
         }
 
         /* Responsive adjustments for smaller screens */
@@ -236,6 +253,10 @@
                 display: none;
                 z-index: 99;
                 padding: 0.75rem;
+            }
+
+            [data-theme="dark"] .nav-links {
+                background: #2d3748;
             }
 
             .nav-links.active {
@@ -401,7 +422,7 @@
     <main>
         <section id="book" class="booking-container py-8">
             <div id="distance-info" class="text-center text-[var(--text-light)] mb-6" aria-live="polite"></div>
-                        <h1 class="text-center mb-4">Secure Your Storage in Just a Minute!</h1>
+            <h1 class="text-center mb-4">Secure Your Storage in Just a Minute!</h1>
             <div class="progress-bar" role="progressbar" aria-valuenow="1" aria-valuemin="1" aria-valuemax="3" aria-label="Booking progress">
                 <div class="progress-step active" data-step="personal"><span class="step-number">1</span> Personal Info<div class="tooltip">Enter your contact details</div></div>
                 <div class="progress-step" data-step="storage"><span class="step-number">2</span> Storage Details<div class="tooltip">Choose location and timing</div></div>
@@ -409,7 +430,7 @@
             </div>
             <div class="booking-grid">
                 <div>
-                    <h2 class="font-semibold mb-4">Your Booking Details</h2>
+                    <h2 class="font planet-semibold mb-4">Your Booking Details</h2>
                     <form id="booking-form" novalidate>
                         <div class="form-section active" data-step="personal">
                             <h3 class="font-semibold mb-2">Tell Us About You</h3>
@@ -708,6 +729,7 @@
         const sanitizeInput = str => str.replace(/[<>"'&]/g, c => ({
             '<': '&lt;', '>': '&gt;', '"': '&quot;', "'": '&apos;', '&': '&amp;'
         })[c] || c);
+
 
         const validateStep = (step, force = false) => {
             if (isValidating) return true;
