--- a/index.html
+++ b/index.html
@@ -558,7 +558,7 @@
                 <a href="index.html#home" class="text-[var(--text)] hover:text-[var(--primary)] p-2 rounded transition">Home</a>
                 <a href="index.html#services" class="text-[var(--text)] hover:text-[var(--primary)] p-2 rounded transition">Services</a>
                 <a href="index.html#contact" class="text-[var(--text)] hover:text-[var(--primary)] p-2 rounded transition">Contact</a>
-                <a href="#book" class="btn btn-primary p-2 sm:px-4 rounded">Book Now</a>
+                <a href="/BagChk2.0/booking.html" class="btn-primary px-3 sm:px-4 py-2 rounded-md">Book Now</a>
             </div>
         </div>
     </div>
