--- a/index.html
+++ b/index.html
@@ -399,7 +399,7 @@
             
         /* Hero Section */
         .hero-image {
-            background-image: linear-gradient(rgba(0,0,0,0.65), rgba(0,0,0,0.65)), url('/BagChk2.0/images/background-mobile.jpg');
+            background-image: linear-gradient(rgba(0,0,0,0.65), rgba(0,0,0,0.65)), url('/BagChk/images/background-mobile.jpg');
             background-size: cover;
             background-position: center;
             min-height: 60vh;
@@ -410,7 +410,7 @@
             color: #fff;
         }
         [data-theme="dark"] .hero-image {
-            background-image: linear-gradient(rgba(0,0,0,0.8), rgba(0,0,0,0.7)), url('/BagChk2.0/images/background-mobile.jpg');
+            background-image: linear-gradient(rgba(0,0,0,0.8), rgba(0,0,0,0.7)), url('/BagChk/images/background-mobile.jpg');
         }
 
         /* Slideshow Styles */
@@ -558,7 +558,7 @@
                 <a href="index.html#home" class="text-[var(--text)] hover:text-[var(--primary)] p-2 rounded transition">Home</a>
                 <a href="index.html#services" class="text-[var(--text)] hover:text-[var(--primary)] p-2 rounded transition">Services</a>
                 <a href="index.html#contact" class="text-[var(--text)] hover:text-[var(--primary)] p-2 rounded transition">Contact</a>
-                <a href="/BagChk2.0/booking.html" class="btn-primary px-3 sm:px-4 py-2 rounded-md">Book Now</a>
+                <a href="/BagChk/booking.html" class="btn-primary px-3 sm:px-4 py-2 rounded-md">Book Now</a>
             </div>
         </div>
     </div>
@@ -572,7 +572,7 @@
             <h1 class="font-extrabold mb-4 sm:mb-6">Secure Luggage Storage in Chicago</h1>
                         <br></br>
 
-            <a href="/BagChk2.0/booking.html" class="btn-primary px-3 sm:px-4 py-2 rounded-md">Book Now</a>
+            <a href="/BagChk/booking.html" class="btn-primary px-3 sm:px-4 py-2 rounded-md">Book Now</a>
         </div>
     </section>
 
@@ -585,35 +585,35 @@
             <div class="slideshow-container relative">
                 <!-- Slides -->
                 <div class="slide fade active" role="group" aria-label="Slide 1 of 5">
-                    <img src="/BagChk2.0/images/bulls.jpg" alt="Chicago Bulls game at United Center" class="w-full h-48 sm:h-64 lg:h-96 object-cover rounded-lg mb-4">
+                    <img src="/BagChk/images/bulls.jpg" alt="Chicago Bulls game at United Center" class="w-full h-48 sm:h-64 lg:h-96 object-cover rounded-lg mb-4">
                     <div class="slide-caption bg-[var(--card-bg)] p-4 sm:p-6 rounded-lg">
                         <h3 class="text-lg sm:text-xl font-semibold mb-2">Chicago Bulls Game at United Center</h3>
                         <p class="text-[var(--text-light)]">Experience the electric atmosphere of a Chicago Bulls game at the iconic United Center. Drop your bags with BagChk and cheer without the hassle!</p>
                     </div>
                 </div>
                 <div class="slide fade" role="group" aria-label="Slide 2 of 5">
-                    <img src="/BagChk2.0/images/garden.jpg" alt="Chicago Botanic Garden" class="w-full h-48 sm:h-64 lg:h-96 object-cover rounded-lg mb-4">
+                    <img src="/BagChk/images/garden.jpg" alt="Chicago Botanic Garden" class="w-full h-48 sm:h-64 lg:h-96 object-cover rounded-lg mb-4">
                     <div class="slide-caption bg-[var(--card-bg)] p-4 sm:p-6 rounded-lg">
                         <h3 class="text-lg sm:text-xl font-semibold mb-2">Chicago Botanic Garden</h3>
                         <p class="text-[var(--text-light)]">Stroll through the serene landscapes of the Chicago Botanic Garden. Store your luggage with BagChk to explore 385 acres of natural beauty hands-free.</p>
                     </div>
                 </div>
                 <div class="slide fade" role="group" aria-label="Slide 3 of 5">
-                    <img src="/BagChk2.0/images/trade.jpg" alt="Tradeshow at McCormick Place" class="w-full h-48 sm:h-64 lg:h-96 object-cover rounded-lg mb-4">
+                    <img src="/BagChk/images/trade.jpg" alt="Tradeshow at McCormick Place" class="w-full h-48 sm:h-64 lg:h-96 object-cover rounded-lg mb-4">
                     <div class="slide-caption bg-[var(--card-bg)] p-4 sm:p-6 rounded-lg">
                         <h3 class="text-lg sm:text-xl font-semibold mb-2">Tradeshow at McCormick Place</h3>
                         <p class="text-[var(--text-light)]">Attend a world-class tradeshow at McCormick Place without carrying your bags. BagChk offers secure storage nearby for a seamless experience.</p>
                     </div>
                 </div>
                 <div class="slide fade" role="group" aria-label="Slide 4 of 5">
-                    <img src="/BagChk2.0/images/graduation.jpg" alt="Student Graduation Event" class="w-full h-48 sm:h-64 lg:h-96 object-cover rounded-lg mb-4">
+                    <img src="/BagChk/images/graduation.jpg" alt="Student Graduation Event" class="w-full h-48 sm:h-64 lg:h-96 object-cover rounded-lg mb-4">
                     <div class="slide-caption bg-[var(--card-bg)] p-4 sm:p-6 rounded-lg">
                         <h3 class="text-lg sm:text-xl font-semibold mb-2">Student Graduations & Events</h3>
                         <p class="text-[var(--text-light)]">Celebrate graduations and student events in Chicago without the burden of luggage. BagChk keeps your belongings safe while you enjoy the moment.</p>
                     </div>
                 </div>
                 <div class="slide fade" role="group" aria-label="Slide 5 of 5">
-                    <img src="/BagChk2.0/images/solider.jpg" alt="Concert at Soldier Field" class="w-full h-48 sm:h-64 lg:h-96 object-cover rounded-lg mb-4">
+                    <img src="/BagChk/images/solider.jpg" alt="Concert at Soldier Field" class="w-full h-48 sm:h-64 lg:h-96 object-cover rounded-lg mb-4">
                     <div class="slide-caption bg-[var(--card-bg)] p-4 sm:p-6 rounded-lg">
                         <h3 class="text-lg sm:text-xl font-semibold mb-2">Concerts at Soldier Field</h3>
                         <p class="text-[var(--text-light)]">Rock out at a concert at Soldier Field. With BagChk, store your bags securely nearby and dance the night away without worry.</p>
@@ -634,7 +634,7 @@
                                                         <br></br>
 
 <!--             <div class="text-center mt-6">
-                <a href="/BagChk2.0/booking.html" class="btn-primary px-4 py-2 rounded-md">Book Storage for Your Event</a>
+                <a href="/BagChk/booking.html" class="btn-primary px-4 py-2 rounded-md">Book Storage for Your Event</a>
             </div> -->
         </div>
     </section>
@@ -663,7 +663,7 @@
         </div>
     </section>
 
-    <!-- Why Choose BagChk2.0 -->
+    <!-- Why Choose BagChk -->
     <div class="mt-8 sm:mt-12 text-center">
                     <br></br>
 
