--- a/booking.html
+++ b/booking.html
@@ -446,10 +446,10 @@
 
             <!-- Navigation Links -->
             <div class="nav-links flex items-center gap-3 sm:gap-5 lg:gap-6">
-                <a href="index.html#home" class="text-[var(--text)] hover:text-[var(--primary)] p-2 rounded transition">Home</a>
-                <a href="index.html#services" class="text-[var(--text)] hover:text-[var(--primary)] p-2 rounded transition">Services</a>
-                <a href="index.html#contact" class="text-[var(--text)] hover:text-[var(--primary)] p-2 rounded transition">Contact</a>
-                <a href="#book" class="btn btn-primary p-2 sm:px-4 rounded">Book Now</a>
+                <a href="index.html" class="text-[var(--text)] hover:text-[var(--primary)] p-2 rounded transition">Home</a>
+<!--                 <a href="index.html#services" class="text-[var(--text)] hover:text-[var(--primary)] p-2 rounded transition">Services</a>
+                <a href="index.html#contact" class="text-[var(--text)] hover:text-[var(--primary)] p-2 rounded transition">Contact</a> -->
+<!--                 <a href="#book" class="btn btn-primary p-2 sm:px-4 rounded">Book Now</a> -->
             </div>
         </div>
     </div>
