--- a/index.html
+++ b/index.html
@@ -619,6 +619,42 @@
                         <p class="text-[var(--text-light)]">Rock out at a concert at Soldier Field. With BagChk, store your bags securely nearby and dance the night away without worry.</p>
                     </div>
                 </div>
+                    <!-- Additional Slides -->
+<div class="slide fade" role="group" aria-label="Slide 6 of 10">
+    <img src="/BagChk/images/marathon.jpg" alt="Chicago Marathon" class="w-full h-48 sm:h-64 lg:h-96 object-cover rounded-lg mb-4">
+    <div class="slide-caption bg-[var(--card-bg)] p-4 sm:p-6 rounded-lg">
+        <h3 class="text-lg sm:text-xl font-semibold mb-2">Chicago Marathon</h3>
+        <p class="text-[var(--text-light)]">Join thousands of runners in one of the world’s premier marathons. Store your gear with BagChk and focus on the finish line.</p>
+    </div>
+</div>
+<div class="slide fade" role="group" aria-label="Slide 7 of 10">
+    <img src="/BagChk/images/blues.jpg alt="Chicago Blues Festival" class="w-full h-48 sm:h-64 lg:h-96 object-cover rounded-lg mb-4">
+    <div class="slide-caption bg-[var(--card-bg)] p-4 sm:p-6 rounded-lg">
+        <h3 class="text-lg sm:text-xl font-semibold mb-2">Chicago Blues Festival</h3>
+        <p class="text-[var(--text-light)]">Feel the soul of the city at the world’s largest free blues festival. Let BagChk handle your bags while you groove in Millennium Park.</p>
+    </div>
+</div>
+<div class="slide fade" role="group" aria-label="Slide 8 of 10">
+    <img src="/BagChk/images/Air.jpg" alt="Chicago Air and Water Show" class="w-full h-48 sm:h-64 lg:h-96 object-cover rounded-lg mb-4">
+    <div class="slide-caption bg-[var(--card-bg)] p-4 sm:p-6 rounded-lg">
+        <h3 class="text-lg sm:text-xl font-semibold mb-2">Chicago Air and Water Show</h3>
+        <p class="text-[var(--text-light)]">Look up! Jets roar over Lake Michigan in this breathtaking summer spectacle. BagChk keeps your hands free for the perfect photo moment.</p>
+    </div>
+</div>
+<div class="slide fade" role="group" aria-label="Slide 9 of 10">
+    <img src="/BagChk/images/lolla.jpg" alt="Lollapalooza in Grant Park" class="w-full h-48 sm:h-64 lg:h-96 object-cover rounded-lg mb-4">
+    <div class="slide-caption bg-[var(--card-bg)] p-4 sm:p-6 rounded-lg">
+        <h3 class="text-lg sm:text-xl font-semibold mb-2">Lollapalooza in Grant Park</h3>
+        <p class="text-[var(--text-light)]">Catch your favorite artists at Chicago’s biggest music festival. Skip the baggage blues with BagChk and enjoy the music hands-free.</p>
+    </div>
+</div>
+<div class="slide fade" role="group" aria-label="Slide 10 of 10">
+    <img src="/BagChk/images/taste.jpg" alt="Taste of Chicago" class="w-full h-48 sm:h-64 lg:h-96 object-cover rounded-lg mb-4">
+    <div class="slide-caption bg-[var(--card-bg)] p-4 sm:p-6 rounded-lg">
+        <h3 class="text-lg sm:text-xl font-semibold mb-2">Taste of Chicago</h3>
+        <p class="text-[var(--text-light)]">Sample dishes from across the city in one giant food fest. Drop your bags with BagChk and dig in stress-free.</p>
+    </div>
+</div>
                 <!-- Navigation Buttons -->
                 <button class="prev-btn absolute top-1/2 left-0 transform -translate-y-1/2 bg-[var(--primary)] text-white p-2 rounded-r-md hover:bg-[var(--primary-dark)] focus:outline-none focus:ring-2 focus:ring-[var(--primary)]" aria-label="Previous slide">❮</button>
                 <button class="next-btn absolute top-1/2 right-0 transform -translate-y-1/2 bg-[var(--primary)] text-white p-2 rounded-l-md hover:bg-[var(--primary-dark)] focus:outline-none focus:ring-2 focus:ring-[var(--primary)]" aria-label="Next slide">❯</button>
@@ -629,8 +665,16 @@
                     <span class="dot" aria-label="Go to slide 3" role="button"></span>
                     <span class="dot" aria-label="Go to slide 4" role="button"></span>
                     <span class="dot" aria-label="Go to slide 5" role="button"></span>
+                    <span class="dot" aria-label="Go to slide 6" role="button"></span>
+                    <span class="dot" aria-label="Go to slide 7" role="button"></span>
+                    <span class="dot" aria-label="Go to slide 8" role="button"></span>
+                    <span class="dot" aria-label="Go to slide 9" role="button"></span>
+                    <span class="dot" aria-label="Go to slide 10" role="button"></span>
+        
                 </div>
             </div>
+        
+
                                                         <br></br>
 
 <!--             <div class="text-center mt-6">
