--- a/index.html
+++ b/index.html
@@ -628,7 +628,7 @@
     </div>
 </div>
 <div class="slide fade" role="group" aria-label="Slide 7 of 10">
-    <img src="/BagChk/images/blues.jpg alt="Chicago Blues Festival" class="w-full h-48 sm:h-64 lg:h-96 object-cover rounded-lg mb-4">
+    <img src="/BagChk/images/blues.jpg" alt="Chicago Blues Festival" class="w-full h-48 sm:h-64 lg:h-96 object-cover rounded-lg mb-4">
     <div class="slide-caption bg-[var(--card-bg)] p-4 sm:p-6 rounded-lg">
         <h3 class="text-lg sm:text-xl font-semibold mb-2">Chicago Blues Festival</h3>
         <p class="text-[var(--text-light)]">Feel the soul of the city at the world’s largest free blues festival. Let BagChk handle your bags while you groove in Millennium Park.</p>
