--- a/index.html
+++ b/index.html
@@ -657,8 +657,8 @@
 </div>
                 <!-- Navigation Buttons -->
                 <button class="prev-btn absolute top-1/2 left-0 transform -translate-y-1/2 bg-[var(--primary)] text-white p-2 rounded-r-md hover:bg-[var(--primary-dark)] focus:outline-none focus:ring-2 focus:ring-[var(--primary)]" aria-label="Previous slide">❮</button>
-                <button class="next-btn absolute top-1/2 right-0 transform -translate-y-1/2 bg-[var(--primary)] text-white p-2 rounded-l-md hover:bg-[var(--primary-dark)] focus:outline-none focus:ring-2 focus:ring-[var(--primary)]" aria-label="Next slide">❯</button>
-                <!-- Navigation Dots -->
+<!--                 <button class="next-btn absolute top-1/2 right-0 transform -translate-y-1/2 bg-[var(--primary)] text-white p-2 rounded-l-md hover:bg-[var(--primary-dark)] focus:outline-none focus:ring-2 focus:ring-[var(--primary)]" aria-label="Next slide">❯</button>
+                <!-- Navigation Dots --> -->
                 <div class="dots-container flex justify-center mt-4">
                     <span class="dot active" aria-label="Go to slide 1" role="button"></span>
                     <span class="dot" aria-label="Go to slide 2" role="button"></span>
@@ -670,7 +670,8 @@
                     <span class="dot" aria-label="Go to slide 8" role="button"></span>
                     <span class="dot" aria-label="Go to slide 9" role="button"></span>
                     <span class="dot" aria-label="Go to slide 10" role="button"></span>
-        
+                        <button class="next-btn absolute top-1/2 right-0 transform -translate-y-1/2 bg-[var(--primary)] text-white p-2 rounded-l-md hover:bg-[var(--primary-dark)] focus:outline-none focus:ring-2 focus:ring-[var(--primary)]" aria-label="Next slide">❯</button>
+
                 </div>
             </div>
         
