--- a/index.html
+++ b/index.html
@@ -666,10 +666,10 @@
         <p class="text-[var(--text-light)]">Sample dishes from across the city in one giant food fest. Drop your bags with BagChk and dig in stress-free.</p>
     </div>
 </div>                 
-<!--                 <button class="prev-btn absolute top-1/2 left-0 transform -translate-y-1/2 bg-[var(--primary)] text-white p-2 rounded-r-md hover:bg-[var(--primary-dark)] focus:outline-none focus:ring-2 focus:ring-[var(--primary)]" aria-label="Previous slide">❮</button>
- -->
+ 
                  <!-- Navigation Buttons -->
                 <button class="next-btn absolute top-1/2 right-0 transform -translate-y-1/2 bg-[var(--primary)] text-white p-2 rounded-l-md hover:bg-[var(--primary-dark)] focus:outline-none focus:ring-2 focus:ring-[var(--primary)]" aria-label="Next slide">❯</button>
+               <button class="prev-btn absolute top-1/2 left-0 transform -translate-y-1/2 bg-[var(--primary)] text-white p-2 rounded-r-md hover:bg-[var(--primary-dark)] focus:outline-none focus:ring-2 focus:ring-[var(--primary)]" aria-label="Previous slide">❮</button>
 
                
                 <!-- Navigation Dots -->
