--- a/index.html
+++ b/index.html
@@ -399,7 +399,7 @@
             
         /* Hero Section */
         .hero-image {
-            background-image: linear-gradient(rgba(0,0,0,0.65), rgba(0,0,0,0.65)), url('/BagChk/images/test.jpg');
+            background-image: linear-gradient(rgba(0,0,0,0.65), rgba(0,0,0,0.65)), url('images/test;.mobile.jpg');
             background-size: cover;
             background-position: center;
             min-height: 60vh;
@@ -410,7 +410,7 @@
             color: #fff;
         }
         [data-theme="dark"] .hero-image {
-            background-image: linear-gradient(rgba(0,0,0,0.8), rgba(0,0,0,0.7)), url('/BagChk/images/test.jpg');
+            background-image: linear-gradient(rgba(0,0,0,0.8), rgba(0,0,0,0.7)), url('images/test;.mobile.jpg');
         }
 
         /* Slideshow Styles */
