--- a/index.html
+++ b/index.html
@@ -570,7 +570,7 @@
 
             <h1 class="font-extrabold mb-4 sm:mb-6">Secure Luggage Storage in Chicago</h1>
                         <br></br>
-
+<p1>Just Hand It To Us.</p1>
             <a href="/BagChk/booking.html" class="btn-primary px-3 sm:px-4 py-2 rounded-md">Book Now</a>
         </div>
     </section>
