--- a/index.html
+++ b/index.html
@@ -568,8 +568,8 @@
         <div class="max-w-4xl mx-auto px-4 sm:px-6 lg:px-8">
                         <br></br>
 
-            <h1 class="font-extrabold mb-4 sm:mb-6">Secure Luggage Storage in Chicago<br>
-<p1>Just Hand It To Us.</p1></br></h1>
+            <h1 class="font-extrabold mb-4 sm:mb-6">Secure Luggage Storage in Chicago</h1>
+            <br><p1>Just Hand It To Us.</p1></br>
               
             <a href="/BagChk/booking.html" class="btn-primary px-3 sm:px-4 py-2 rounded-md">Book Now</a>
         </div>
